Adicionamos mais uma parte de texto no nosso código

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Aula 1</title>
 </head>
 <body>
-    <h1>Minha primeira Aula</h1>
+    <h1>Minha primeira Aula, Com mais um commit</h1>
 </body>
 </html>
